refactor: rename files and restructure folders
- Rename files to reflect the new folder structure:
  - matriz_leds.c -> pio_matrix/matriz_leds.c
  - matriz_leds.h -> pio_matrix/matriz_leds.h
  - pio_matrix.pio -> pio_matrix/pio_matrix.pio
  - tarefa.embarca.c -> raspberrypi-leds.c
- Update CMakeLists.txt and wokwi.toml to reflect the changes
- Update repository name

--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/tarefa_embarca.uf2'
-elf = 'tarefa_embarca.elf'
+firmware = 'build/raspberrypi-leds.uf2'
+elf = 'raspberrypi-leds.elf'
